--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Prime Factors</title>
-	<script src="PrimeFactors.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prime Factors</title>
+    <script src="PrimeFactors.js"></script>
 </head>
 
 <body>
